# creandus-paludis

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.bash  configure.ac  creandus_add.bash.in  creandus_cleanup.bash.in  creandus_failure.bash.in  dynusers_add.bash.in  dynusers_cleanup.bash.in  dynusers_failure.bash.in
ebuild_fail/: Makefile.am
ebuild_postrm_post/: 00_dynusers.bash.in  Makefile.am  dynusers.bash.in  dynusers_del.bash.in
ebuild_setup_pre/: Makefile.am  addgroup.sh  adduser.sh  dynusers.bash.in  dynusers_add.bash.in
tools/: get_autoconf_macros.sed  subst.bash
